# serializer version: 1
# name: test_all_entities[camera.bosch_innenbereich-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.bosch_innenbereich',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_shc_camera',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': None,
    'unique_id': 'bosch_shc_cam_aabbccdd-1122-3344-5566-778899003344',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[camera.bosch_innenbereich-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      'auto_play_default': 'lan',
      'bosch_priority': None,
      <CameraEntityStateAttribute.BRAND: 'brand'>: 'Bosch',
      'camera_id': 'aabbccdd-1122-3344-5566-778899003344',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.bosch_innenbereich?token=1caab5c3b3',
      'event_type': '',
      'firmware': '9.40.104',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bosch Innenbereich',
      'hardware_version': 'HOME_Eyes_Indoor',
      'last_event': '',
      'live_buffer_mode': 'balanced',
      'live_proxy': '',
      'live_rtsps': '',
      'mac': 'aa:bb:cc:dd:ee:00',
      <CameraEntityStateAttribute.MODEL_NAME: 'model_name'>: 'Eyes Innenkamera II',
      'status': 'UNKNOWN',
      'stream_errors': 0,
      'stream_status': 'idle',
      'streaming_state': 'idle',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.bosch_innenbereich',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_all_entities[camera.bosch_terrasse-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.bosch_terrasse',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_shc_camera',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': None,
    'unique_id': 'bosch_shc_cam_aabbccdd-1122-3344-5566-778899001122',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[camera.bosch_terrasse-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      'auto_play_default': 'lan',
      'bosch_priority': None,
      <CameraEntityStateAttribute.BRAND: 'brand'>: 'Bosch',
      'camera_id': 'aabbccdd-1122-3344-5566-778899001122',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.bosch_terrasse?token=1caab5c3b3',
      'event_type': '',
      'firmware': '9.40.104',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bosch Terrasse',
      'hardware_version': 'HOME_Eyes_Outdoor',
      'last_event': '',
      'live_buffer_mode': 'balanced',
      'live_proxy': '',
      'live_rtsps': '',
      'mac': 'aa:bb:cc:dd:ee:ff',
      <CameraEntityStateAttribute.MODEL_NAME: 'model_name'>: 'Eyes Außenkamera II',
      'status': 'UNKNOWN',
      'stream_errors': 0,
      'stream_status': 'idle',
      'streaming_state': 'idle',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.bosch_terrasse',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
